--- a/styles.css
+++ b/styles.css
@@ -12,3 +12,9 @@
 #box-4{
     grid-row: span 3;
 }
+
+@media (max-width: 768px) {
+    .main-section {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
